@@ -39,6 +39,10 @@ test_requires 'Test::More';
 test_requires 'Test::Trap';
 test_requires 'Test::Exception';
 
+feature 'Size detection for images for embedding in LaTeX templates',
+    -default => 1,
+    'Image::Size' => 0;
+
 feature 'POS module credit card processing support',
     -default => 0,
     'Net::TCLink' => 0;
