@@ -34,6 +34,10 @@
 	  <th align="right"><?lsmb text('Separate Duties') ?></th>
 	  <td><input name="separate_duties" size="5" value="<?lsmb form.separate_duties ?>" /></td>
 	</tr>
+	<tr>
+	  <th align="right"><?lsmb text('Images in Templates') ?></th>
+	  <td><input name="template_images" size="5" value="<?lsmb form.template_images ?>" /></td>
+	</tr>
         <tr>
          <th align="right"><?lsmb text('default_language') ?></th>
 	  <td>
